Fix line-break in reply-to and no-notes labels

--- a/src/components/Note/Note.module.scss
+++ b/src/components/Note/Note.module.scss
@@ -83,6 +83,10 @@
         font-weight: 400;
         line-height: 20px;
         margin-top: 6px;
+        max-width: 518px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         .label {
           color: var(--text-primary);
         }
